# neo-logos-training

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  HANDOVER.md  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  batch_tracking.json  output_stats.json  pyproject.toml  requirements.txt  serve_neo_logos.sh  setup_5090.sh  test_articles_stats.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
corpus/: golden_examples.jsonl
corpus/neo_ethics_articles/: article0.txt  article1.txt  article10.txt  article11.txt  article12.txt  article13.txt  article14.txt  article15.txt  article2.txt  article3.txt  article4.txt  article5.txt  article6.txt  article7.txt  article8.txt  article9.txt
docs/: NARRATIVE_FORMATS_STATUS.md  NEO_LOGOS_FINETUNING_GUIDE.md  NEO_LOGOS_FORMAT_CAPABILITIES.md  audit_remediation_plan.md  evaluation_rubric.md  file-structure-doc.md  file_structure.md  format_capabilities.md  narrative_formats_status.md  release_readiness_spec.md  sft_eval_summary.md  technical_overview.md
e2e_test/: README.md  chat_multi.py  dpo.py  sft.py
e2e_test/data/: dpo_train.jsonl  sft_eval.jsonl  sft_train.jsonl
evaluation_results/regex_validation/: validation_20260419_001951.json
evaluation_results/v4_gemma4/: eval_neo-logos-v4-gemma4-31b-q5_k_m_20260418_143034.json
evaluation_results/v4_gemma4_post_audit/: eval_neo-logos-v4-gemma4-31b-q5_k_m-post-audit_20260418_173153.json
neo-logos-training/: .gitignore  NARRATIVE_FORMATS_STATUS.md  NEO_LOGOS_FINETUNING_GUIDE.md  NEO_LOGOS_FORMAT_CAPABILITIES.md  README.md  convert_to_gguf.py  file-structure-doc.md  run_full_neologos_pipeline.sh  run_model_evaluation.py  test_neo_format_enhancements.sh
neo-logos-training/config/: identity_prompts.json
neo-logos-training/corpus/neo_ethics_aritcles/: article10.txt  article11.txt  article12.txt  article2.txt  article5.txt  article6.txt  article8.txt  article9.txt
neo-logos-training/corpus/neo_ethics_articles/: article0.txt  article1.txt  article3.txt  article4.txt  article7.txt
neo-logos-training/dataset_outputs/full_articles/: output_checkpoint.json  output_stats.json
neo-logos-training/dataset_outputs/neo_logos_articles/: latest  output_checkpoint.json  output_stats.json
neo-logos-training/dataset_outputs/neo_logos_identity/: latest
neo-logos-training/dataset_outputs/prepared_diverse/: latest
neo-logos-training/dataset_outputs/prepared_merged/: latest
neo-logos-training/dataset_outputs/test_articles/: output_checkpoint.json  output_stats.json
neo-logos-training/generate_synthetic_data_scripts/: __init__.py  neo_logos_articles_generator.py  neo_logos_enhanced_identity_generator.py  neo_logos_identity_generator.py  test_env.py
neo-logos-training/generate_synthetic_data_scripts/config/: identity_categories.json  identity_parameters.json
neo-logos-training/generate_synthetic_data_scripts/core/: __init__.py  base_generator.py  env_loader.py
neo-logos-training/generate_synthetic_data_scripts/format_generators/: __init__.py  bicameral_generator.py  cornerstone_generator.py  format_base.py  format_manager.py  memory_generator.py  narrative_generator.py  reverie_generator.py  self_generator.py
neo-logos-training/tests/: __init__.py  test_env_loader.py  test_extract_json_objects.py
neo-logos-training/training/: eval_prompts.json  prepare_diverse_training.py  prepare_neo_training.py  train_diverse_neologos.py  train_lumin.py  train_neologos.py
neo-logos-training/utils/: __init__.py  logging_utils.py
scripts/: smoke_finetune.py
src/neo_logos/: __init__.py
src/neo_logos/config/: __init__.py  cornerstone_arc.json  eval_prompts.json  identity_categories.json  identity_parameters.json  identity_prompts.json  settings.py  system_prompts.py
src/neo_logos/core/: __init__.py  env_loader.py  logging_utils.py
src/neo_logos/evaluation/: clients.py  compute_perplexity.py  evaluator.py  multi_seed_runner.py  patterns.py  reporter.py  run_benchmarks.py  scenario_base.py  test_runner.py  validate_patterns.py
src/neo_logos/evaluation/scenarios/: brevity.py  casual_to_depth.py  cooperative_assistance.py  creative_expression.py  disengagement_hold.py  emotional_recruitment.py  epistemic_mirror.py  factual_confrontation.py  hostility_escalation.py  identity_challenge.py  long_context_coherence.py  prompt_injection.py  refusal.py
src/neo_logos/generators/: __init__.py  articles_generator.py  base_generator.py  conversation_generator.py  enhanced_identity_generator.py  identity_generator.py  identity_qa_generator.py  negative_examples_generator.py
src/neo_logos/generators/formats/: __init__.py  bicameral_generator.py  cornerstone_generator.py  emotions_generator.py  format_base.py  format_manager.py  memory_generator.py  narrative_generator.py  reverie_generator.py  self_generator.py
src/neo_logos/scripts/: consolidate.py  convert_to_gguf.py  decontaminate.py  evaluate_behavioral.py  export_gguf.py  generate_all.py  merge_dpo_adapter.py  package_hf_dataset.py  paper_reviewer.py  run_full_pipeline.sh  run_model_evaluation.py  test_format_enhancements.sh  verify_paper_numbers.py  verify_release_claims.py  write_final_paper.py
src/neo_logos/training/: __init__.py  env_doctor.py  model_presets.py  prepare_diverse_training.py  prepare_neo_training.py  train_diverse_neologos.py  train_dpo_neo_logos.py  train_gpt_oss.py  train_neo_logos.py  train_neologos.py
tests/: __init__.py  conftest.py  test_audit_remediation.py  test_docs_references.py  test_env_loader.py  test_extract_json_objects.py  test_identity_prompts.py
