[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo-logos-training"
version = "0.1.0"
description = "Neo-Logos AI Training Suite - Synthetic data generation and fine-tuning"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
training = [
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "trl>=0.9.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "huggingface-hub>=0.24.0",
    "torch>=2.4.0",
    "accelerate>=0.33.0",
    "unsloth>=2024.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring API keys",
    "gpu: marks tests requiring GPU",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neo_logos"]
