[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo-logos-training"
version = "0.1.0"
description = "Neo-Logos AI Training Suite - Synthetic data generation and fine-tuning"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
training = [
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "trl>=0.9.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "huggingface-hub>=0.24.0",
    "torch>=2.4.0",
    "accelerate>=0.33.0",
    "unsloth>=2024.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring API keys",
    "gpu: marks tests requiring GPU",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neo_logos"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "llama.cpp",
    "unsloth_compiled_cache",
    "baseline_models",
    "benchmark_data",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",   # line length handled by formatter
    "E402",   # allow late imports (common in training scripts where torch must load lazily)
    "B008",   # default arg calls (common in argparse / typer patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]
"src/neo_logos/scripts/*" = ["B007"]
