[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo-logos-training"
version = "0.1.0"
description = "Neo-Logos AI Training Suite - Synthetic data generation and fine-tuning"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "packaging>=24.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[project.scripts]
neo-logos-eval = "neo_logos.evaluation.test_runner:main"
neo-logos-multiseed = "neo_logos.evaluation.multi_seed_runner:main"
neo-logos-generate-all = "neo_logos.scripts.generate_all:main"
neo-logos-decontaminate = "neo_logos.scripts.decontaminate:main"
neo-logos-release-check = "neo_logos.scripts.verify_release_claims:main"
neo-logos-package-hf-dataset = "neo_logos.scripts.package_hf_dataset:main"
neo-logos-validate-patterns = "neo_logos.evaluation.validate_patterns:main"
neo-logos-train = "neo_logos.training.train_neo_logos:main"
neo-logos-train-dpo = "neo_logos.training.train_dpo_neo_logos:main"
neo-logos-env-doctor = "neo_logos.training.env_doctor:main"
neo-logos-export-gguf = "neo_logos.scripts.export_gguf:main"
neo-logos-merge-dpo = "neo_logos.scripts.merge_dpo_adapter:main"

[project.optional-dependencies]
training = [
    "transformers>=5.0.0",
    "datasets>=2.20.0",
    "trl>=0.24.0",
    "peft>=0.19.0",
    "bitsandbytes>=0.49.0",
    "huggingface-hub>=0.24.0",
    "torch>=2.10.0",
    "triton>=3.3.1",
    "accelerate>=1.6.0",
    "unsloth>=2026.4.0",
    "unsloth_zoo>=2026.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring API keys",
    "gpu: marks tests requiring GPU",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neo_logos"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "llama.cpp",
    "unsloth_compiled_cache",
    "baseline_models",
    "benchmark_data",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",   # line length handled by formatter
    "E402",   # allow late imports (common in training scripts where torch must load lazily)
    "B008",   # default arg calls (common in argparse / typer patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]
"src/neo_logos/scripts/*" = ["B007"]
